<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="96"
        android:title="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_join_casa"
        android:orderInCategory="97"
        android:title="@string/action_join_casa"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_members"
        android:orderInCategory="98"
        android:title="@string/action_members"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="never"
        />


</menu>
