<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <CheckBoxPreference
         android:key="example_checkbox"
         android:title="@string/pref_title_social_recommendations"
         android:summary="@string/pref_description_social_recommendations"
         android:defaultValue="true" />
 -->
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_currency_key"
        android:title="@string/pref_currency"
        android:defaultValue="@string/pref_currency_default"
        android:inputType="text"
        android:singleLine="true" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
   <!-- <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_values"
        android:entryValues="@array/pref_units_options"
        />-->
    -->
</PreferenceScreen>